[package]
name = "tplink"
version = "0.1.0"
edition = "2021"
description = "Pure Rust TP-Link smart device client library"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["net", "time", "io-util", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csscolorparser = "0.7.0"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
